# quantIDE

./: .gitignore  .sesskey  AGENTS.md  CONTRIBUTING.md  FIXES_SUMMARY.md  README.md  app.py  benchmark_result.txt  debug_market_data.py  findings.md  generate_market_html.py  mkdocs.yml  progress.md  prototype.html  pyproject.toml  pyrightconfig.json  quantide.db  repo.sh  screen.py  stock_screener.py  sync_test_data.py  take_market_screenshot.py  take_screenshot.py  take_screenshot_market.py  take_screenshot_v2.py  task_plan.md  test_api.sh  test_endpoint.py  test_quote.py  tox.ini  trigger_data_sync.py  trigger_data_sync_simple.py  verify_backend.py  verify_market_data.py
.ai/: cfg4py.md  fasthtml.md
.claude/: CLAUDE.md  rules  skills
.dev/: AGENTS.MD  README.md  broker_abstraction_convergence_v1.md  cfg4py_inventory_v1.md  gateway-runtime-followups.md  gateway_refactor_interfaces_v1.md  gateway_refactor_migration_plan_v1.md  gateway_refactor_requirements_v1.md  tasks.md
.dev/archived/: 26-04-01.tasks.md
.dev/docs/archived/: ui.md
.dev/memory/: 26-03-31.md  26-04-01.md  26-04-10.md  26-04-11.md  26-05-02.md
.dev/qmt-gateway/: README.md
.dev/qmt-gateway/docs/: qmt-gateway.md
.dev/rules/: AGENTS.MD  project_rules.md
.dev/skills/monsterui/: llms-ctx-full.txt
.dev/specs/: 00-architecture.md  01-init-wizard.md  02-layout-nav-style.md  03-system_management.md  04-system_settings.md  data_management.md  init-wizard.md  release_architecture_decision_v1.md  three_mode_acceptance_checklist.md
.dev/v0.1/: ui.md
.dev/v0.1/analysis/: 01-data-layer.md
.dev/v0.1/strategy/: story.md
.github/: ISSUE_TEMPLATE.md
.github/copilot/: rules  skills  specs
.trae/: rules  skills
.trae/documents/: PyQMT 策略回测系统需求与实施计划.md  生成 Simulation_QMT 每日 Asset_Position 快照的实现方案.md  统一三类 Broker 的事件驱动与每日收益度量实现方案.md
.trae/rules/: project_rules.md
.trae/specs/: data_management.md  init-wizard.md
data/: app.db  app.db-shm  app.db-wal  calendar.parquet  stock_list.parquet
data/bars/: dates.pq
data/data/: stock_list.parquet
docs/: brokers.md  design.md  index.md  init-wizard.md  merge.md  ui.md
docs/v0.1/: backtesting.md  design.md  features.md
notebooks/: data.ipynb  db.ipynb  jupyter_and_fasthtml.ipynb  subscribe.json  temp.ipynb  xtquant.ipynb
pyqmt/: __init__.py  app.py  subscribe.py
pyqmt/config/: __init__.py  defaults.yml  runtime.py  schema.py
pyqmt/core/: __init__.py  constants.py  context.py  enums.py  errors.py  legacy_qmt.py  message.py  scheduler.py  singleton.py  strategy.py  timeframe.py  utils.py  xtwrapper.py
pyqmt/dal/: __init__.py  cache.py  chores.py  haystore.py  tradedb.py
pyqmt/data/: __init__.py  helper.py  protocols.py  sqlite.py
pyqmt/models/: __init__.py
pyqmt/notify/: __init__.py  dingtalk.py  mail.py
pyqmt/sametime/: __init__.py  actor.py  example.py  executor.py  job.py
pyqmt/service/: abstract_broker.py  backtest_broker.py  base_broker.py  datafeed.py  discovery.py  grid_search.py  init_wizard.py  livequote.py  metrics.py  qmt_broker.py  registry.py  runner.py  sim_broker.py  simulation_broker.py  strategy_runtime.py  sync.py
pyqmt/web/: __init__.py  auth.py  main.py  middleware.py  middleware_feature.py  middleware_init.py
qmt-gateway/: .sesskey  README.md  pyproject.toml
qmt-gateway/docs/: qmt-gateway.md
qmt-gateway/qmt_gateway/: __init__.py  __main__.py  app.py  config.py  runtime.py  xtquant_probe.py
qmt-gateway/qmt_gateway/apis/: __init__.py  auth.py  history.py  quotes.py  sector_subscription.py  sectors.py  stock.py  trade.py
qmt-gateway/qmt_gateway/core/: __init__.py  enums.py  xtwrapper.py
qmt-gateway/qmt_gateway/db/: __init__.py  models.py  sqlite.py
qmt-gateway/qmt_gateway/services/: __init__.py  history_download_service.py  quote_service.py  scheduler.py  sector_subscription.py  sector_sync.py  stock_service.py  trade_service.py
qmt-gateway/qmt_gateway/web/: theme.py
qmt-gateway/qmt_gateway/web/layouts/: __init__.py  base.py  main.py
qmt-gateway/qmt_gateway/web/pages/: __init__.py  data_mgmt.py  init_wizard.py  trading.py
quantide/: __init__.py  app.py  app_factory.py  subscribe.py
quantide/config/: __init__.py  defaults.yml  paths.py  runtime.py  schema.py  settings.py
quantide/core/: errors.py  init_wizard_steps.py  message.py  scheduler.py  strategy.md  strategy.py  utils.py  xtwrapper.py
quantide/data/: __init__.py  sqlite.py
quantide/notify/: dingtalk.py  mail.py
quantide/service/: abstract_broker.py  backtest_broker.py  base_broker.py  datafeed.py  discovery.py  grid_search.py  init_wizard.py  livequote.py  metrics.py  qmt_broker.py  registry.py  runner.py  sim_broker.py  strategy_runtime.py
quantide/web/: __init__.py  middleware.py  middleware_feature.py  middleware_init.py  theme.py
scripts/: clickhouse.txt  demo_event_flow.py  duckdb.txt  test_registry.py
tests/: __init__.py  conftest.py
tests/assets/: 2024_adjust_factor.parquet  2024_st_info.parquet  bars_2021_2024.small.parquet  baseline_calendar.parquet  defaults.yml
tests/config/: __init__.py  defaults.yml  test_paths.py  test_runtime.py  test_settings.py
tests/core/: test_adapter_registry.py  test_broker_bridge.py  test_clock_bridge.py  test_gateway_broker_adapter.py  test_gateway_client.py  test_gateway_market.py  test_message.py  test_port_broker.py  test_runtime_modes.py  test_sim_broker_market_data.py  test_strategy_runner.py  test_strategy_runtime_manager.py  test_xtwrapper.py
tests/dal/: test_ch.py  test_tradedb.py
tests/data/: test_helper.py  test_init_data.py  test_legacy_xtdata_retirement.py  test_sqlite.py  test_sqlite_market_data_retirement.py  test_subscribe_retirement.py
tests/e2e/: __init__.py
tests/service/: test_abstract_broker.py  test_backtest_broker.py  test_grid_search.py  test_init_wizard.py  test_livequote.py  test_metrics.py  test_qmt_broker_retirement.py  test_runner.py  test_sim_broker.py  test_sim_broker_paper.py  test_sim_broker_paper_lifecycle.py  test_strategy_runtime.py  test_sync.py
tests/web/: __init__.py  test_init_wizard.py  test_strategy.py  test_trade.py
(+227 files in other folders)
