[tool]

[tool.poetry]
name = "quantide"
version = "0.1.0"
homepage = "https://github.com/zillionare/quantide"
description = "Skeleton project created by Python Project Wizard (ppw)."
authors = ["aaron yang <aaron_yang@jieyu.ai>"]
readme = "README.md"
license =  "MIT"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.13'
]

packages = [
    { include = "quantide" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">=3.13,<4.0"

apscheduler = "^3.10.4"
arrow = "^1.3.0"
python-fasthtml = "^0.12.36"
bcrypt = "^5.0.0"
loguru = "^0.7.3"
aiosmtplib = "^5.0.0"
bidict = "^0.23.1"
tenacity = "^9.1.2"
sqlite-utils = "^3.39"
polars = "^1.36.1"
polars-talib = "^0.1.5"
pandas = "^2.3.3"
pyarrow = "^22.0.0"
monsterui = "^1.0.36"
cffi = ">=1.17.1"
msgpack = "^1.1.2"
tushare = "^1.4.25"
websockets = "^15.0.1"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "primary"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py313"
extend-exclude = [
    ".eggs",
    ".git",
    ".hg",
    ".history",
    ".mypy_cache",
    ".tox",
    ".venv",
    "_build",
    "buck-out",
    "build",
    "dist",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "D"]
ignore = [
    "E501",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D203",
    "D400",
    "D415",
    "D213",
    "F403",
    "F405",
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.pytest.ini_options]
markers = [
    "e2e: HTTP-level end-to-end tests organized by user journey",
]

[dependency-groups]
dev = [
    "mypy (>=1.19.1,<2.0.0)",
    "pyarrow-stubs (>=20.0.0.20251215)",
    "ruff (>=0.11.0,<1.0.0)",
    "tox (>=3.24.5,<4.0.0)",
    "pre-commit (>=2.17.0,<3.0.0)",
    "twine (>=3.8.0,<4.0.0)",
    "html2image (>=2.0.7,<3.0.0)",
]

test = [
    "freezegun (>=1.5.5,<2.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
]

doc = [
    "mkdocs (>=1.2.3,<2.0.0)",
    "mkdocs-autorefs (>=0.3.1,<2.0.0)",
    "mkdocs-include-markdown-plugin (>=3.2.3,<8.0.0)",
    "mkdocs-material (>=8.1.11,<10.0.0)",
    "mkdocs-material-extensions (>=1.0.3,<2.0.0)",
    "mkdocstrings (>=0.25.2,<2.0.0)",
    "mkdocstrings-python (>=0.9.0,<3.0.0)",
    "mike (>=1.1.2,<3.0.0)",
]
